fixing tagline vertical spacing

--- a/_scss/block/_base.scss
+++ b/_scss/block/_base.scss
@@ -222,7 +222,8 @@ section {
 #whiskHeader {
 	background-color: $color-blue-dark;
 	h5 {
-		margin: 20px 0;
+        margin-top: 2px;
+        margin-bottom: 20px;
         line-height: 28px;
     }
 }
